[package]
name = "shortcut-api"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Shortcut API"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = "1.0.164"
serde_derive = "1.0.164"
serde_with = "3.0.0"
serde_json = "1.0.96"
url = "2.4.0"
uuid = { version = "1.3.4", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
