[package]
name = "shortcut-api"
version = "0.1.2"
authors = ["0x6b"]
description = "The API client for Shortcut REST API V3"
license = "MIT"
edition = "2021"

[dependencies]
serde = "1.0.*"
serde_derive = "1.0.*"
serde_with = "3.0.*"
serde_json = "1.0.*"
url = "2.4.*"
uuid = { version = "1.3.*", features = ["serde"] }
reqwest = { version = "0.11.*", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
